<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="search_empty">No Matches.</string>
    <string name="audiofocus_request_failed_message">Cannot play music during a call.</string>
    <string name="delete_progress_title">Delete songs</string>
    <string name="delete_progress_message">Please wait while deleting songs...</string>
    <string name="menu_search">Search</string>
    <string name="fail_to_start_stream">Failed to play the requested stream.</string>
    <string name="music_fm_transmiter">FM transmitter</string>
    <string name="effects_list_title">Sound effects</string>
    <string name="usb_in_using">Playlist is unavailable when USB storage is ON.</string>
    <string name="shuffle_menu_item_desc">Shuffle</string>
    <string name="repeat_menu_item_desc">Repeat</string>
    <string name="delete_track_failed">Failed to delete.</string>
    <string name="no_music_title">No music.</string>
    <string name="voice_command_indicator_ticker">You can say %1$s and %2$s to control music playing.</string>
    <string name="voice_command_indicator_content_title">Voice control</string>
    <string name="voice_command_indicator_content_text">Voice control is enable for Music</string>
    <string name="onesong">1 song</string>
    <string name="goto_start">Library</string>
    <string name="party_shuffle">Party shuffle</string>
    <string name="party_shuffle_off">Party shuffle off</string>
    <string name="delete_item">Delete</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="play_all">Play all</string>
    <string name="delete_artist_desc">All songs by %s will be deleted.</string>
    <string name="delete_album_desc">The entire album \"%s\" will be deleted.</string>
    <string name="delete_song_desc">\"%s\" will be deleted.</string>
    <string name="delete_confirm_button_text">OK</string>
    <string name="scanning">Scanning SD card…</string>
    <string name="scanning_nosdcard">Scanning USB storage…</string>
    <string name="nowplaying_title">Now playing</string>
    <string name="partyshuffle_title">Party shuffle</string>
    <string name="artists_title">Artists</string>
    <string name="albums_menu">Albums</string>
    <string name="albums_title">Albums</string>
    <string name="tracks_menu">Songs</string>
    <string name="tracks_title">Songs</string>
    <string name="playlists_menu">Playlists</string>
    <string name="playlists_title">Playlists</string>
    <string name="videos_title">Videos</string>
    <string name="all_title">All media</string>
    <string name="browse_menu">Artists</string>
    <string name="search_title">Search</string>
    <string name="no_tracks_title">No songs</string>
    <string name="no_videos_title">No videos</string>
    <string name="no_playlists_title">No playlists</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <string name="recentlyadded">Recently added</string>
    <string name="recentlyadded_title">Recently added</string>
    <string name="podcasts_listitem">Podcasts</string>
    <string name="podcasts_title">Podcasts</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_message">Your phone does not have an SD card inserted.</string>
    <string name="sdcard_missing_message_nosdcard">Your phone doesn\'t have USB storage.</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_message">Your media storage is busy.</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="sdcard_error_message">An error was encountered on your SD card.</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="unknown_track_name">Unknown track</string>
    <string name="shuffle_on_notif">Shuffle is on.</string>
    <string name="shuffle_off_notif">Shuffle is off.</string>
    <string name="repeat_off_notif">Repeat is off.</string>
    <string name="repeat_current_notif">Repeating current song.</string>
    <string name="repeat_all_notif">Repeating all songs.</string>
    <string name="ringtone_menu">Use as phone ringtone</string>
    <string name="ringtone_menu_short">Use as ringtone</string>
    <string name="ringtone_set">\"%s\" set as phone ringtone.</string>
    <string name="play_selection">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="playlist_name_hint">Playlist name</string>
    <string name="queue">Current playlist</string>
    <string name="new_playlist">New</string>
    <string name="new_playlist_name_template">New playlist %d</string>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="create_playlist_overwrite_text">Overwrite</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">The song couldn\'t be played.</string>
    <string name="service_start_error_button">OK</string>
    <string name="weekpicker_set">Done</string>
    <string name="weekpicker_title">Set time</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="clear_playlist">Clear playlist</string>
    <string name="musicbrowserlabel">Music</string>
    <string name="musicshortcutlabel">Music playlist</string>
    <string name="mediaplaybacklabel">Music</string>
    <string name="videobrowserlabel">Videos</string>
    <string name="mediapickerlabel">Music</string>
    <string name="playback_failed">Sorry, failed to open file.</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="streamloadingtext">Connecting to %s…</string>
    <string name="mediasearch">Search for %s using:</string>
    <string name="working_artists">Artists…</string>
    <string name="working_albums">Albums…</string>
    <string name="working_songs">Songs…</string>
    <string name="working_playlists">Playlists…</string>
    <string name="loading">Loading…</string>
    <string name="sort_by_track">Tracks</string>
    <string name="sort_by_album">Albums</string>
    <string name="sort_by_artist">Artists</string>
    <string name="music_picker_title">Choose music track</string>
    <string name="search_settings_description">Artists, albums, and tracks</string>
    <string name="search_hint">Search Music</string>
    <string name="fast_scroll_alphabet"> ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="widget_initial_text">Touch to choose music.</string>
    <string name="durationformatshort">%2$d:%5$02d</string>
    <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
    <string name="musiclist_repeat">This song exist in the playlist！</string>
    <string name="delete_artist_desc_nosdcard">Permanently delete all songs by %s from USB storage?</string>
    <string name="delete_album_desc_nosdcard">Permanently delete the entire album \"%s\" from USB storage?</string>
    <string name="delete_song_desc_nosdcard">Permanently delete \"%s\" from USB storage?</string>
    <string name="sdcard_missing_title_nosdcard">No USB storage</string>
    <string name="sdcard_busy_title_nosdcard">USB storage unavailable</string>
    <string name="sdcard_busy_message_nosdcard">Your USB storage is busy.</string>
    <string name="sdcard_error_title_nosdcard">USB storage error</string>
    <string name="sdcard_error_message_nosdcard">An error was encountered on your USB storage.</string>
    <string name="effectspanel">Equalizer</string>
    <string name="effectspanel_not_found">Equalizer not found.</string>
    <string name="albumsongseparator">\n</string>
    <string name="notification_artist_album">%2$s\n%1$s</string>
    <string name="add_file">Add file</string>
    <string name="add_zero_file">0 songs added to playlist.</string>
    <string name="accessibility_prev">Previous</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_play">Play</string>
    <string name="accessibility_pause">Pause</string>
    <string name="sort_menu" tools:ignore="MissingTranslation">Sort</string>
    <string name="sort_by_name_asc" tools:ignore="MissingTranslation">Name (A-Z)</string>
    <string name="sort_by_name_desc" tools:ignore="MissingTranslation">Name (Z-A)</string>
    <string name="sort_by_date_asc" tools:ignore="MissingTranslation">Date added (Oldest first)</string>
    <string name="sort_by_date_desc" tools:ignore="MissingTranslation">Date added (Newest first)</string>
    <string name="sort_by_artist_asc" tools:ignore="MissingTranslation">Artist (A-Z)</string>
    <string name="sort_by_artist_desc" tools:ignore="MissingTranslation">Artist (Z-A)</string>
</resources>
